@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-27T08:13:56Z",
+  "timestamp" : "2023-07-28T08:13:45Z",
   "count_outdated" : 150,
   "uniques_outdated" : 125,
-  "count" : 155,
-  "uniques" : 130,
+  "count" : 156,
+  "uniques" : 131,
   "clones" : [
     {
       "timestamp": "2023-07-15T00:00:00Z",
@@ -43,6 +43,15 @@
     },
     {
       "timestamp": "2023-07-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-28T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
